Add svickova page, update index, improve hamburger page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin recipes</h1>
-    <a href="recipies/hamburger.html">Hamburger</a>
+    <ul>
+        <li><a href="recipies/hamburger.html">Hamburger</a></li>
+        <li><a href="recipies/svickova.html">Svickova</a></li>
+    </ul>
 </body>
 </html>
