--- a/recipies/hamburger.html
+++ b/recipies/hamburger.html
@@ -17,14 +17,14 @@
         <li>Cheese</li>
         <li>Lettuce</li>
         <li>Toamato</li>
-        <li>Sauce</li>
+        <li>Hamburger Sauce</li>
     </ul>
     <h6>Steps:</h6>
     <ol>
         <li>Place patty on grill</li>
         <li>Flip and put cheese on top</li>
         <li>Cut open bun and put patty between</li>
-        <li>Put vegetables and sauce on patty and enjoy</li>
+        <li>Put vegetables and hamburger sauce on patty and enjoy</li>
     </ol>
 </body>
 </html>
