Add krupice page, add krupice image, update index

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
         <li><a href="recipies/hamburger.html">Hamburger</a></li>
         <li><a href="recipies/svickova.html">Svickova</a></li>
+        <li><a href="recipies/krupice.html">Krupice</a></li>
     </ul>
 </body>
 </html>
