Adds styles.css page and improves the look of the hamburger page

--- a/recipies/hamburger.html
+++ b/recipies/hamburger.html
@@ -5,26 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../styles.css" />
 </head>
 <body>
     <h1>How to make a hamburger</h1>
-    <img src="../images/hamburger.jpg" alt="Image of hamburger">
-    <h5>This recipie will how you how to make a hamburger</h5>
-    <h6>Ingredients:</h6>
-    <ul>
-        <li>Bun</li>
-        <li>Patty</li>
-        <li>Cheese</li>
-        <li>Lettuce</li>
-        <li>Toamato</li>
-        <li>Hamburger Sauce</li>
-    </ul>
-    <h6>Steps:</h6>
-    <ol>
-        <li>Place patty on grill</li>
-        <li>Flip and put cheese on top</li>
-        <li>Cut open bun and put patty between</li>
-        <li>Put vegetables and hamburger sauce on patty and enjoy</li>
-    </ol>
+    <img src="../images/hamburger.jpg" alt="Image of hamburger" width="auto" height="300">
+    <h5 class="recipie-title">This recipie will how you how to make a hamburger</h5>
+    <span class="list-1">
+        <h6 class="list-title">Ingredients:</h6>
+        <ul>
+            <li>Bun</li>
+            <li>Patty</li>
+            <li>Cheese</li>
+            <li>Lettuce</li>
+            <li>Toamato</li>
+            <li>Hamburger Sauce</li>
+        </ul>
+    </span>
+    <span class="list-2">
+        <h6>Steps:</h6>
+        <ol class="list-2">
+            <li>Place patty on grill</li>
+            <li>Flip and put cheese on top</li>
+            <li>Cut open bun and put patty between</li>
+            <li>Put vegetables and hamburger sauce on patty and enjoy</li>
+        </ol>
+    </span>
 </body>
 </html>
