--- a/recipies/krupice.html
+++ b/recipies/krupice.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Krupice</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>How to make krupice</h1>
-    <img src="../images/krupice.jpg" alt="Image of krupice">
+    <img src="../images/krupice.jpg" alt="Image of krupice" width="auto" height="300">
     <h5>This recipie will how you how to make a krupice</h5>
     <h6>Ingredients:</h6>
     <ul>
