--- a/recipies/svickova.html
+++ b/recipies/svickova.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Svickova</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>How to make svickova</h1>
-    <img src="../images/svickova.jpg" alt="Image of svickova">
-    <h5>This recipie will how you how to make svickova</h5>
+    <img src="../images/svickova.jpg" alt="Image of svickova" width="auto" height="300">
+    <h5 class="blue">This recipie will show you how you how to make svickova</h5>
     <h6>Ingredients:</h6>
     <ul>
         <li>Dumpling</li>
